setting target attributes to _blank

--- a/html/index.html
+++ b/html/index.html
@@ -72,11 +72,11 @@
                 </div>
             </div>
             <div class="grid-item">
-                <a href="https://www.microlandcomputers.com/request-services" class="icon-container">
+                <a target="_blank" href="https://www.microlandcomputers.com/request-services" class="icon-container">
                     <img src="/images/Microland-Computer-Center-Logo.png" alt="">
                 </a>
                 <div class="description-container">
-                    <a class="block-description" href="https://www.microlandcomputers.com/request-services" target="_blank">Microland - Submit a Service Request</a>
+                    <a class="block-description" target="_blank" href="https://www.microlandcomputers.com/request-services" target="_blank">Microland - Submit a Service Request</a>
                 </div>
             </div>
             <!--
